--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,11 @@
 }
 
 body {
-    --shadow-el1: 0 5px 5px -3px #0003,0 8px 10px 1px #00000024,0 3px 14px 2px #0000001f;
-    --shadow-el2: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+    --shadow-el1: 0 5px 5px -3px #0003, 0 8px 10px 1px #00000024,
+        0 3px 14px 2px #0000001f;
+    --shadow-el2: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),
+        0px 24px 38px 3px rgba(0, 0, 0, 0.14),
+        0px 9px 46px 8px rgba(0, 0, 0, 0.12);
 
     --full-height: calc(100vh - 64px);
 }
@@ -59,7 +62,9 @@ body {
     transform: translate(80px, 0) !important;
 }
 
-table, tr, td {
+table,
+tr,
+td {
     border: none;
     margin: 0;
     border-spacing: 0;
