--- a/src/app.css
+++ b/src/app.css
@@ -26,6 +26,7 @@ body[data-color-scheme="light"] {
     --accent: #32a5a9;
     --on-accent: #fff;
     --text-muted: #d3d3d3;
+    --warning: #ffb818;
 }
 body[data-color-scheme="dark"] {
     --background: #24242b;
@@ -41,6 +42,7 @@ body[data-color-scheme="dark"] {
     --accent: #32a5a9;
     --on-accent: #fff;
     --text-muted: #535361;
+    --warning: #ffb818;
 }
 
 body {
