--- a/src/app.css
+++ b/src/app.css
@@ -26,7 +26,7 @@ body[data-color-scheme="light"] {
     --accent: #32a5a9;
     --on-accent: #fff;
     --text-muted: #d3d3d3;
-    --warning: #ffb818;
+    --warning: #ffcc00;
 }
 body[data-color-scheme="dark"] {
     --background: #24242b;
@@ -42,6 +42,7 @@ body[data-color-scheme="dark"] {
     --accent: #32a5a9;
     --on-accent: #fff;
     --text-muted: #535361;
+	--warning: #ffcc00;
 }
 
 body {
